--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Dec 28 14:39:55 KST 2016
-sdk.dir=C\:\\Users\\user\\AppData\\Local\\Android\\Sdk
+#Thu Dec 29 11:45:20 KST 2016
+sdk.dir=C\:\\Users\\seoye\\AppData\\Local\\Android\\sdk
